src/test/ui/platform-intrinsic-params.stderr
error[E0444]: platform-specific intrinsic has invalid number of arguments: found 0, expected 1
  --> $DIR/platform-intrinsic-params.rs:13:5
   |
LL |     fn x86_mm_movemask_ps() -> i32; //~ERROR found 0, expected 1
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0444`.
